--- a/templates/customer_layout.html
+++ b/templates/customer_layout.html
@@ -38,7 +38,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Search</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Summary</a>
+                        <a class="nav-link active" aria-current="page" href="/customer_summary/{{name}}">Summary</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/login">Logout</a>
