--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -22,7 +22,7 @@
                         <button class="btn btn-outline-success" type="submit">Search</button>
                       </form>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Summary</a>
+                        <a class="nav-link active" aria-current="page" href="/admin_summary/{{name}}">Summary</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/login">Logout</a>
