--- a/templates/professional_layout.html
+++ b/templates/professional_layout.html
@@ -21,7 +21,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Search</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Summary</a>
+                        <a class="nav-link active" aria-current="page" href="/professional_summary/{{name}}">Summary</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="/login">Logout</a>
