--- a/templates/admin_summary.html
+++ b/templates/admin_summary.html
@@ -1,7 +1,7 @@
 {% extends "admin_layout.html" %}
 
 {% block content %}
-<h2> SUMMARY</h2>
+<h2 class="centre"> SUMMARY</h2>
 
     <div class="mb-3">
         <h3> Graphical data of service Request Status </h3>
