--- a/templates/view_service.html
+++ b/templates/view_service.html
@@ -9,7 +9,7 @@
 
 
 <div class="container mt-5" class="centre">
-  <h2 class="text-center mb-4">Best {{service.name}} Packages {{service_professional}}, {{service}},</h2>
+  <h2 class="text-center mb-4">Best {{service.name}} Packages </h2>
   <a href="/customer/{{name}}" type="" class="btn btn-primary" class="centre"> ←Back </a>  
   <div class="centre">
     {{cnf_msg}}
