--- a/templates/professional_summary.html
+++ b/templates/professional_summary.html
@@ -1,13 +1,13 @@
 {% extends "professional_layout.html" %}
 
 {% block content %}
-<h2> SUMMARY</h2>
+<h2 class="centre"> SUMMARY</h2>
 
-    <div class="mb-3">
-        <h3> Graphical data of service Request Status </h3>
+    <div class="mb-3" >
+        <h3 > Graphical data of service Request Status </h3>
     </div>
-    <div class="mb-3">
-     <!---  <img src="./static/image/admin_summary.jpeg" widh="200" height="200">   -->
+    <div class="mb-3" class="centre">
+
      <img src="{{url_for('static', filename='image/professional/'+name+'_professional_summary.jpeg')}}" >    
     </div>
 
