--- a/templates/professional_layout.html
+++ b/templates/professional_layout.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <div class="my_container">
-        <div class="centre"> <h1>Household Sevice </h1></div>
+        <div class="centre"> <h1>Household Sevice   </h1></div> 
+        <a href="/professional_profile/{{name}}" style="color: white; background-color: #007BFF; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-size: 16px; font-weight: bold;"> <span> Profile </span> </a>
+        
             <div class="my_panel">
               <nav class="navbar navbar-expand-lg " style="background-color: #e3f2fd;">
                 <div class="container-fluid">
@@ -37,10 +39,10 @@
                       </li>
                     </ul>
                     <span class="navbar-text">
-                      Welcome Professional
+                      Welcome 
                     </span> <br>
                             <br>
-                    <div class="wlc_msg">{{name}} </div>
+                    <div class="wlc_msg">{{name}} </div>  
                   </div>
                 </div>
               </nav>
